tests/data/placebo/test_security_group_perm_expand/ec2.AuthorizeSecurityGroupIngress_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "978f1be0-1633-4477-861b-1a2cb973e82b", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Thu, 05 Jan 2017 02:25:38 GMT"
            }
        }
    }
}
