tests/data/placebo/test_security_group_perm_expand/ec2.AuthorizeSecurityGroupIngress_2.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "4af9eee9-8882-47ae-a929-f5e5ceebb3dd", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Thu, 05 Jan 2017 02:25:39 GMT"
            }
        }
    }
}
