tests/data/placebo/test_security_group_perm_expand/ec2.CreateSecurityGroup_1.json
{
  "status_code": 200,
  "data": {
    "GroupId": "sg-e3842c8a",
    "ResponseMetadata": {}
  }
}
