tests/data/placebo/test_security_group_perm_expand/ec2.CreateSecurityGroup_2.json
{
  "status_code": 200,
  "data": {
    "GroupId": "sg-e2842c8b",
    "ResponseMetadata": {}
  }
}
