tests/data/placebo/test_security_group_perm_expand/ec2.CreateVpc_1.json
{
  "status_code": 200,
  "data": {
    "ResponseMetadata": {},
    "Vpc": {
      "VpcId": "vpc-c25285ab",
      "InstanceTenancy": "default",
      "Tags": [],
      "Ipv6CidrBlockAssociationSet": [],
      "State": "pending",
      "DhcpOptionsId": "dopt-96bc48ff",
      "CidrBlock": "10.42.0.0/16",
      "IsDefault": false
    }
  }
}
