tests/data/placebo/test_security_group_perm_expand/ec2.DeleteSecurityGroup_1.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "cf7f6352-4581-4013-8bac-d3ccf78f7c12", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Thu, 05 Jan 2017 02:25:40 GMT"
            }
        }
    }
}
