tests/data/placebo/test_security_group_perm_expand/ec2.DeleteSecurityGroup_2.json
{
    "status_code": 200, 
    "data": {
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "5e994d87-350e-4643-89b1-f69b317ea9c5", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Thu, 05 Jan 2017 02:25:40 GMT"
            }
        }
    }
}
