tests/data/placebo/test_security_group_perm_expand/ec2.DescribeSecurityGroups_1.json
{
  "status_code": 200,
  "data": {
    "SecurityGroups": [
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "inbound access",
        "IpPermissions": [
          {
            "PrefixListIds": [],
            "FromPort": 443,
            "IpRanges": [
              {
                "CidrIp": "10.42.1.0/24"
              },
              {
                "CidrIp": "10.42.2.0/24"
              }
            ],
            "ToPort": 443,
            "IpProtocol": "tcp",
            "UserIdGroupPairs": [
              {
                "UserId": "644160558196",
                "GroupId": "sg-e2842c8b"
              }
            ],
            "Ipv6Ranges": []
          }
        ],
        "GroupName": "allow-some-ingress",
        "VpcId": "vpc-c25285ab",
        "OwnerId": "644160558196",
        "GroupId": "sg-e3842c8a"
      },
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "inbound ref access",
        "IpPermissions": [],
        "GroupName": "allowed-reference",
        "VpcId": "vpc-c25285ab",
        "OwnerId": "644160558196",
        "GroupId": "sg-e2842c8b"
      },
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "default VPC security group",
        "Tags": [
          {
            "Value": "Private",
            "Key": "NetworkLocation"
          }
        ],
        "IpPermissions": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [],
            "UserIdGroupPairs": [
              {
                "UserId": "644160558196",
                "GroupId": "sg-aa6c90c3"
              }
            ],
            "Ipv6Ranges": []
          }
        ],
        "GroupName": "default",
        "VpcId": "vpc-5f6c9936",
        "OwnerId": "644160558196",
        "GroupId": "sg-aa6c90c3"
      },
      {
        "IpPermissionsEgress": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [
              {
                "CidrIp": "0.0.0.0/0"
              }
            ],
            "UserIdGroupPairs": [],
            "Ipv6Ranges": []
          }
        ],
        "Description": "default VPC security group",
        "IpPermissions": [
          {
            "IpProtocol": "-1",
            "PrefixListIds": [],
            "IpRanges": [],
            "UserIdGroupPairs": [
              {
                "UserId": "644160558196",
                "GroupId": "sg-e0842c89"
              }
            ],
            "Ipv6Ranges": []
          }
        ],
        "GroupName": "default",
        "VpcId": "vpc-c25285ab",
        "OwnerId": "644160558196",
        "GroupId": "sg-e0842c89"
      }
    ],
    "ResponseMetadata": {}
  }
}
