tests/data/placebo/test_security_group_perm_expand/tagging.GetResources_1.json
{
    "status_code": 200, 
    "data": {
        "PaginationToken": "", 
        "ResourceTagMappingList": [], 
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "02273fa4-5b4f-11e7-b54b-cf03244b62a5", 
            "HTTPHeaders": {
                "x-amzn-requestid": "02273fa4-5b4f-11e7-b54b-cf03244b62a5", 
                "date": "Tue, 27 Jun 2017 15:40:55 GMT", 
                "content-length": "1444", 
                "content-type": "application/x-amz-json-1.1"
            }
        }
    }
}
